<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Sockets" Id="{af267d4b-4696-4f22-bc38-34cd6edd9c90}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	//AREA_1 : AdsSocket := (PrgName := 'AREA_1', AmsNetId := '1.0.131.216.1.1', AmsPort := 851);
	//AREA_2 : AdsSocket := (PrgName := 'AREA_2', AmsNetId := '2.0.131.216.1.1', AmsPort := 851);
	AREA_3 : AdsSocket := (PrgName := 'AREA_3', AmsNetId := '3.0.131.216.1.1', AmsPort := 851);
	//AREA_4 : AdsSocket := (PrgName := '', AmsNetId := ''(*'4.0.131.216.1.1'*), AmsPort := 851);
	//AREA_5 : AdsSocket := (PrgName := 'AREA_5', AmsNetId := '5.0.131.216.1.1', AmsPort := 851);
	//AREA_6 : AdsSocket := (PrgName := 'AREA_6', AmsNetId := '6.0.131.216.1.1', AmsPort := 851);
	adsMajorNetwork : AdsTcpUnitEx;
END_VAR
VAR_GLOBAL
	(*
	SUBAREA_4_1 : AdsSocket := (PrgName := 'SUBAREA_4_1', AmsNetId := '4.1.113.174.1.1', AmsPort := 851);
	SUBAREA_4_2 : AdsSocket := (PrgName := 'SUBAREA_4_2', AmsNetId := '4.2.113.174.1.1', AmsPort := 851);
	SUBAREA_4_3 : AdsSocket := (PrgName := 'SUBAREA_4_3', AmsNetId := '4.3.113.174.1.1', AmsPort := 851);
	SUBAREA_4_4 : AdsSocket := (PrgName := 'SUBAREA_4_4', AmsNetId := '4.4.113.174.1.1', AmsPort := 851);
	SUBAREA_4_5 : AdsSocket := (PrgName := 'SUBAREA_4_5', AmsNetId := '4.5.113.174.1.1', AmsPort := 851);
	SUBAREA_4_6 : AdsSocket := (PrgName := 'SUBAREA_4_6', AmsNetId := '4.6.113.174.1.1', AmsPort := 851);
	SUBAREA_4_7 : AdsSocket := (PrgName := 'SUBAREA_4_7', AmsNetId := '4.7.113.174.1.1', AmsPort := 851);
	SUBAREA_4_8 : AdsSocket := (PrgName := 'SUBAREA_4_8', AmsNetId := '4.8.113.174.1.1', AmsPort := 851);
	SUBAREA_4_9 : AdsSocket := (PrgName := 'SUBAREA_4_9', AmsNetId := '4.9.113.174.1.1', AmsPort := 851);
	*)
	adsLocalNetwork : AdsTcpUnitEx;
END_VAR
VAR_GLOBAL CONSTANT
	numSockets : INT := 6;
	numSubarea4Sockets : INT := 9;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>