<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{2cbdba0c-ad31-4c75-8f6b-289818655c29}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR_OUTPUT
	localTime : TIMESTRUCT;
	year, month, day : WORD;
	hour, minute, second : WORD;
END_VAR
VAR
	sMessage : STRING := 'from AREA_4';
	newRecipient : STRING;
	newData : AdsData;
	retrievedData : AdsData;
	
	sendOnce : BOOL;
	sendFastNum : BOOL;
	
	i : INT := 0;
	
	fbLocalSystemTime : FB_LocalSystemTime;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[readTime();	

blocks();
	
IF sendOnce OR sendFastNum THEN
	MEMSET(ADR(newData), 0, SIZEOF(newData));
	
	sMessage := TO_STRING(i);
	
	newRecipient := TO_STRING(AreaNum.AREA_4);
	newData.description := EventsEnum.TEST_COMMS;
	newData.timestamp := localTime;
	STRNCPY(ADR(newData.binaryData), ADR(sMessage), SIZEOF(sMessage));
	newData.binaryData[100000] := 69;
	
	IF
		adsMajorNetwork.sendMessage(recipient := newRecipient, data := newData)
	THEN
		i := i + 1;
		sendOnce := FALSE;
	END_IF	
END_IF

retrievedData := AREA_3.receivingData;]]></ST>
    </Implementation>
    <Method Name="blocks" Id="{86d4601f-8bdd-4a71-8fc8-38723960d75b}">
      <Declaration><![CDATA[METHOD blocks : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[adsMajorNetwork(
	setMode:= 1, 
	bBusy=> , 
	error=> , 
	errorID=> );
	
adsLocalNetwork(
	setMode:= 1, 
	bBusy=> , 
	error=> , 
	errorID=> );]]></ST>
      </Implementation>
    </Method>
    <Method Name="readTime" Id="{8417ab3c-dc63-40a8-9592-4c004032f0dd}">
      <Declaration><![CDATA[METHOD readTime : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbLocalSystemTime(
	sNetID:= , 
	bEnable:= TRUE, 
	dwCycle:= , 
	dwOpt:= , 
	tTimeout:= , 
	bValid=> , 
	systemTime=> localTime, 
	tzID=> );
year := localTime.wYear;
month := localTime.wMonth;
day := localTime.wDay;
hour := localTime.wHour;
minute := localTime.wMinute;
second := localTime.wSecond;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="MAIN">
      <LineId Id="413" Count="0" />
      <LineId Id="415" Count="21" />
      <LineId Id="208" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.blocks">
      <LineId Id="24" Count="4" />
      <LineId Id="13" Count="1" />
      <LineId Id="29" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.readTime">
      <LineId Id="6" Count="13" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>